--- a/product/templates/product/new_sales.html
+++ b/product/templates/product/new_sales.html
@@ -13,7 +13,14 @@
            -webkit-appearance: none; 
            margin: 0; 
     }
+	.panel-default .form-group {
+		margin-bottom: 5px; /* Increase or decrease the margin as needed */
+	}
 
+	/* Adjust the height of the textareas within the panel */
+	.panel-default textarea {
+		height: 80px; /* Change the height as needed */
+	}
 	.lbl{	
 		color:blue;
 		font-size:25px;
@@ -33,7 +40,8 @@
 		text-align: center;
 	}
 </style>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	
 </head>
@@ -43,33 +51,55 @@
         <!-- Log on to codeastro.com for more projects -->
 
         <div class="panel panel-default">
-            <div class="panel-heading panel-heading-text " style="font-size: 2rem;"><u>Customer Details</u></div>
-            <div class="panel-body">
-                    
-                <div class="form-group">
-                    <label for="id_name" class="panel-body-text lbl">Name:</label> 					
-					<input type="text" class="form-control textinput shared-class" id="id_name" value="{{ customer.name }}" disabled>
+			 <div class="panel-heading panel-heading-text" style="font-size: 2rem;">
+				<u>Customer Details</u>
+				<button class="btn btn-link pull-right" id="togglePanel">Toggle</button>
+			</div>
+			<div class="panel-body">
+				<table class="table table-bordered">
+					<tr>
+						<th class="lbl">Name:</th>
+						<td>
+							<input type="text" class="form-control textinput shared-class" value="{{ customer.name }}" disabled>
+						</td>
+					</tr>
+					<tr>
+						<th class="lbl">Phone No:</th>
+						<td>
+							<input type="text" class="form-control textinput shared-class" value="{{ customer.phone }}" disabled>
+						</td>
+					</tr>
+					<tr>
+						<th class="lbl">Email:</th>
+						<td>
+							<input type="text" class="form-control textinput shared-class" value="{{ customer.email }}" disabled>
+						</td>
+					</tr>
+					<tr>
+						<th class="lbl">Address:</th>
+						<td>
+							<textarea class="form-control textinput shared-class" disabled rows="3">{{ customer.address }}</textarea>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<script>
+		
+			$(document).ready(function() {
+			
+				// Initially, hide the panel body
+				$(".panel-body").hide();
 
-				</div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="id_phone" class="panel-body-text lbl">Phone No:</label>
-                        <input type="text" class="form-control textinput shared-class" id="id_phone" value="{{ customer.phone }}" disabled>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="id_email" class="panel-body-text lbl">Email:</label>
-                        <input type="text" class="form-control textinput shared-class" id="id_email" value="{{ customer.email }}" disabled>
-                    </div>
-                </div>
-				<div class="form-group">
-                    <label for="id_address" class="panel-body-text lbl">Address:</label>                    
-					<textarea class="form-control textinput shared-class" id="id_address" disabled rows="3">{{ customer.address }}</textarea>
-				</div>
-
-            </div><!-- Log on to codeastro.com for more projects -->
-        </div>
-
+				// Toggle the panel body when the button is clicked
+				$("#togglePanel").click(function() {
+					$(".panel-body").slideToggle();
+				});
+				
+			});
+																
+		</script>
+		
         <br>
 
         <form method="post" class="panel panel-default">
@@ -93,7 +123,7 @@
 			
 			
                 <div id="stockitem"> 
-                    <div class="panel-body">
+                    <div class="panel-body-2">
 						<table>
 							<thead>
 								<th class="lbl" style="text-align: left;">Row</th>
@@ -108,6 +138,7 @@
 								{% for form in formset %}
 								{% if form.errors %}
 									<div  style="background-color:powderblue;">
+									<h5>
 									<p><strong style="color:black;">Error in
 										Row {{ forloop.counter }}:</strong>
 										
@@ -116,6 +147,10 @@
 												{% for error in field_errors %}
 													
 														<strong style="color:black;">{{ form|get_field_label:field_name }}-</strong><span style="color: red;">{{ error }}</span>{% if not forloop.last %} {% endif %}
+									</h5>
+													<script>
+														$(".panel-body").hide();
+													</script>
 													
 												{% endfor %}
 											{% endfor %}
@@ -137,6 +172,7 @@
 <script>
 
 $(document).ready(function() {
+
 	  // Listen for the 'input' event on the input field
 	  var id='{{ forloop.counter }}'-1;
 	  console.log('id...',id);
